--- a/app/src/main/res/layout/fragment_layout_apk.xml
+++ b/app/src/main/res/layout/fragment_layout_apk.xml
@@ -9,7 +9,7 @@
     <!--二维码-->
     <RelativeLayout
         android:layout_width="160dp"
-        android:layout_height="wrap_content"
+        android:layout_height="150dp"
         android:layout_marginLeft="15dp">
 
         <ImageView
@@ -30,19 +30,62 @@
             android:layout_alignParentRight="true"
             android:padding="15dp"
             android:src="@mipmap/note_icon" />
+
+        <TextView
+            android:id="@+id/tv_app_name"
+            android:layout_width="15dp"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="12dp"
+            android:layout_marginTop="45dp"
+            android:gravity="bottom"
+            android:textColor="@color/white"
+            android:paddingBottom="5dp"
+            android:text=""
+            android:textSize="12sp" />
     </RelativeLayout>
 
-    <!--版本选择-->
+    <!--apk类型-->
     <TextView
-        android:id="@+id/tv_choose_version"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="5dp"
+        android:text="请选择下载apk类型"
+        android:textColor="@color/white"
+        android:textSize="12sp" />
+
+    <TextView
+        android:id="@+id/tv_choose_apk_type"
         android:layout_width="200dp"
         android:layout_height="45dp"
-        android:layout_marginTop="25dp"
         android:background="@drawable/rect_solid_blue_border_white_5"
         android:drawableRight="@mipmap/arrow_down"
         android:gravity="center"
         android:paddingRight="15dp"
-        android:text="正式版"
+        android:text="请选择"
+        android:textColor="@color/white"
+        android:textSize="15sp" />
+
+    <!--apk版本号-->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="5dp"
+        android:text="请选择下载apk版本号"
+        android:textColor="@color/white"
+        android:textSize="12sp" />
+
+    <TextView
+        android:id="@+id/tv_choose_version_code"
+        android:layout_width="200dp"
+        android:layout_height="45dp"
+        android:background="@drawable/rect_solid_blue_border_white_5"
+        android:drawableRight="@mipmap/arrow_down"
+        android:gravity="center"
+        android:paddingRight="15dp"
+        android:text="请选择"
         android:textColor="@color/white"
         android:textSize="15sp" />
 
