--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,5 +33,8 @@
         <item name="android:windowIsFloating">false</item>
     </style>
 
-
+    <style name="SampleTheme" parent="android:Theme.Holo.Light.Dialog">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowBackground">@color/transparent</item>
+    </style>
 </resources>
