--- a/app/src/main/res/layout/fragment_layout_apk.xml
+++ b/app/src/main/res/layout/fragment_layout_apk.xml
@@ -147,7 +147,7 @@
         android:textColor="@color/white"
         android:textSize="15sp" />
 
-    <androidx.recyclerview.widget.RecyclerView
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
