--- a/app/src/main/res/layout/layout_apk_type.xml
+++ b/app/src/main/res/layout/layout_apk_type.xml
@@ -5,7 +5,7 @@
     android:background="@drawable/rect_solid_blue_border_white_5"
     android:layout_height="wrap_content">
 
-    <androidx.recyclerview.widget.RecyclerView
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
